# updog

./: .gitignore  README.md  UPDOG.md  check.py  config.py  logs.py  main.py  metrics.py  pyproject.toml  requirements.txt  status.py
deprecated-python-project/src/updog/: alert.py  check.py  logs.py  main.py
src/updog/: config.py  main.py  metrics.py  status.py
tests/: test_metrics.py  test_status.py
