[project]
name = "updog"
version = "0.1.0"
requires-python = ">=3.12"
description = "A CLI system monitoring and alert tool"
readme = "README.md"
dependencies = [
    "emoji==2.15.0",
    "iniconfig==2.3.0",
    "packaging==26.2",
    "pluggy==1.6.0",
    "psutil==7.2.2",
    "puremagic==2.2.0",
    "pygments==2.20.0",
    "pypdf==6.13.2",
    "pytest==9.1.0",
]

[project.scripts]
updog = "updog.main:main"

[tool.setuptools.packages.find]
where = ["src"]
